Server view layout no longer breaks on small screens

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -34,7 +34,7 @@ html, body, main, #app {
     min-height: 100%;
     height: 100%;
     min-width: 100%;
-    width: 80%;
+    width: 100%;
     left: 20%;
 }
 
@@ -48,18 +48,14 @@ html, body, main, #app {
     overflow: auto;
 }
 
-#chat-input-bar {
-    border-top: 2px solid #DFDFDF;
-    height: 15%;
-    width: 100%;
-}
-
 #chat-form {
+    border-top: 2px solid #DFDFDF;
     width: 100%;
-    height: 100%;
+    min-height: 10%;
+    height: 10%;
 }
 
-#chat-input-bar input {
-    height: 60%;
-    width: 78%;
+#chat-form input[type="text"] {
+    height: 100%;
+    width: 75%;
 }
